--- a/Repartidor/views/home.jade
+++ b/Repartidor/views/home.jade
@@ -1,6 +1,6 @@
 html(lang="en")
 	head
-		title Tarea 3 - 201504242
+		title Repartido - Practica 4
 		meta(charset="UTF-8")
 		link(rel="stylesheet" type="text/css" href="public/css/style.css")
 		meta(name="viewport" content="width=device-width, initial-scale=1")
